force-app/main/default/objects/AM_Payment__c/fields/AM_PaymentId__c.field-meta.xml
<CustomField>
    <fullName>AM_PaymentId__c</fullName>
    <label>Payment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>