force-app/main/default/objects/AM_Payment__c/fields/AM_PaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>AM_PaymentReceived__c</fullName>
    <label>Payment Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>