force-app/main/default/objects/AM_Payment__c/fields/AM_PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>AM_PaymentStatus__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>