force-app/main/default/objects/AM_Payment__c/fields/TM_Amount__c.field-meta.xml
<CustomField>
    <fullName>TM_Amount__c</fullName>
    <formula>IF( ISPICKVAL( AM_PaymentStatus__c , &apos;Success&apos;) ,  AM_PaymentReceived__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>